adicionando menu hamburguer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ricardo Hofstetter Dias - Desenvolvedor Frontend</title>
+  <title>Álvaro Alves - Desenvolvedor Frontend</title>
 
   <link rel="stylesheet" href="src/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/reset.css" />
@@ -30,8 +30,9 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">AS</h1>
         </a>
+
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
 
@@ -40,12 +41,14 @@
               <span class="hamburguer"></span>
             </div>
           </label>
+          
           <ul>
             <li><a href="#sobre-mim">Sobre mim</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#projetos">Meus projetos</a></li>
           </ul>
         </nav>
+
       </div>
     </div>
   </header>
@@ -55,7 +58,7 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
+          <h1>Sou o Álvaro Alves</h1>
           <h2>Desenvolvedor Frontend</h2>
 
           <div class="redes-sociais">
