--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="src/css/reset.css" />
 
   <link rel="stylesheet" href="src/css/variaveis.css" />
-  
+
   <!-- Global -->
   <link rel="stylesheet" href="src/css/globais.css" />
-  
+
   <link rel="stylesheet" href="src/css/secoes/header.css" />
   <link rel="stylesheet" href="src/css/secoes/home.css" />
   <link rel="stylesheet" href="src/css/secoes/sobre.css" />
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        
+
 
         <div class="img-home">
           <div class="img-box inner-shadow">
@@ -89,8 +89,44 @@
     </div>
   </section>
 
-  <section class="sobre-mim">
+  <section class="sobre-mim section" id="sobre-mim">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2>Sobre mim</h2>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="imagem-sobre-mim">
+          <div class="img-box inner-shadow">
+            <img src="src/imagens/foto-perfil1.png" alt="foto do perfil" class="outer-shadow">
+          </div>
+        </div>
+
+        <div class="informacoes-sobre-mim">
+          <p>
+            <strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</strong> Dignissimos, pariatur, eaque
+            doloremque laborum qui, sunt repellendus voluptas saepe sequi dolore aspernatur ipsa voluptatibus nihil
+            dolorum consequatur nobis nesciunt beatae a.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi illum dolorem ipsam. Provident veniam
+            omnis eaque sequi excepturi quam ipsam atque harum sunt tempora quae inventore, aspernatur perspiciatis
+            nobis ullam!
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          </p>
+
+          <div class="botoes">
+            <a target="_blank" href="src/arquivos/alvaro-alves-cv.pdf" class="botao outer-shadow">Veja meu CV</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="habilidades">
@@ -104,8 +140,8 @@
   <section class="footer">
 
   </section>
-  
-  
+
+
 </body>
 
 </html>
