adicionada seção de habilidades

--- a/index.html
+++ b/index.html
@@ -129,8 +129,66 @@
     </div>
   </section>
 
-  <section class="habilidades">
+  <section class="habilidades section" id="habilidades">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2>Habilidades</h2>
+        </div>
+      </div>
+    </div>
 
+    <div class="container-habilidades row">
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-javascript-plain"></i>
+        </div>
+        <h3>Javascript</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-html5-plain-wordmark"></i>
+        </div>
+        <h3>HTML5</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-css3-plain-wordmark"></i>
+        </div>
+        <h3>CSS3</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-github-original"></i>
+        </div>
+        <h3>GitHub</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-git-plain"></i>
+        </div>
+        <h3>Git</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-react-plain"></i>
+        </div>
+        <h3>React</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+      <div class="habilidade">
+        <div class="logo">
+          <i class="devicon devicon-less-plain-wordmark"></i>
+        </div>
+        <h3>Less</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est necessitatibus voluptatem corrupti corporis reprehenderit dolorem obcaecati numquam consectetur autem, ducimus, explicabo, adipisci temporibus veniam incidunt. Iste, doloribus aspernatur? Maxime.</p>
+      </div>
+    </div>
   </section>
 
   <section class="projetos">
