--- a/index.html
+++ b/index.html
@@ -192,7 +192,66 @@
   </section>
 
   <section class="projetos">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2>Meus Projetos</h2>
+        </div>
+      </div>
+    </div>
 
+    <div class="container-projetos container">
+      <div class="projeto">
+        <a href="#">
+          <img src="https://via.placeholder.com/515x700" alt="projeto nft">
+          <h3>Projeto 1</h3>
+          <div class="informacoes-projeto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <p>🔗Ver no GitHub Pages</p>
+          </div>
+        </a>
+      </div>
+      <div class="projeto">
+        <a href="#">
+          <img src="https://via.placeholder.com/515x700" alt="projeto nft">
+          <h3>Projeto 2</h3>
+          <div class="informacoes-projeto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <p>🔗Ver no GitHub Pages</p>
+          </div>
+        </a>
+      </div>
+      <div class="projeto">
+        <a href="#">
+          <img src="https://via.placeholder.com/515x700" alt="projeto nft">
+          <h3>Projeto 3</h3>
+          <div class="informacoes-projeto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <p>🔗Ver no GitHub Pages</p>
+          </div>
+        </a>
+      </div>
+      <div class="projeto">
+        <a href="#">
+          <img src="https://via.placeholder.com/515x700" alt="projeto nft">
+          <h3>Projeto 4</h3>
+          <div class="informacoes-projeto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <p>🔗Ver no GitHub Pages</p>
+          </div>
+        </a>
+      </div>
+      <!-- <div class="projeto">
+        <a href="#">
+          <img src="https://via.placeholder.com/515x700" alt="projeto nft">
+          <h3>Projeto 5</h3>
+          <div class="informacoes-projeto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <p>🔗Ver no GitHub Pages</p>
+          </div>
+        </a>
+      </div> -->
+    </div>
   </section>
 
   <section class="footer">
