--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
   </section>
 
-  <section class="projetos">
+  <section class="projetos" id="projetos">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -254,9 +254,26 @@
     </div>
   </section>
 
-  <section class="footer">
+  <footer class="footer">
+    <div class="container">
+      <h2>Me envie uma mensagem!</h2>
+      <div class="redes-sociais">
+        <a href="#" class="outer-shadow">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" class="outer-shadow">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="#" class="outer-shadow">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="#" class="outer-shadow">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
 
-  </section>
+  </footer>
 
 
 </body>
